# rustnabi

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  diesel.toml  refresh_sql.sh
db/: schema.sql
hanabi-engine-core/: Cargo.toml
hanabi-engine-core/src/: card.rs  clue.rs  lib.rs  property.rs  zone.rs
hanabi-webserver/: README.md  diesel.toml
hanabi-webserver/migrations/0.1.0/: down.sql  up.sql
hanabi-webserver/src/db/: models.rs
hanabi-webserver/src/game/: board_state.rs  card.rs  clue.rs  color.rs  deck.rs  discard_area.rs  play_seat.rs  table.rs
hanabi-webserver/src/http/: routing.rs
hanabi-webserver/static/: excludes.txt  index.html  websocket-example.html
hanabi-webserver/static/css/: main.css
migrations/0.1.0/: down.sql  up.sql
migrations/2018-08-12-141440_all_tables/: down.sql  up.sql
src/: build.rs  db.rs  game.rs  hash.rs  http.rs  main.rs  util.rs
src/db/: mod.rs  models.rs  schema.rs
src/game/: board.rs  card.rs  clue.rs  color.rs  deck.rs  discard_area.rs  hand.rs  mod.rs  options.rs  play_area.rs  player.rs  rank.rs  suit.rs  variant.rs
src/http/: routing.rs
static/: index.html
