[package]
name = "rustnabi"
version = "0.1.0"
authors = ["aaron"]
edition = "2018"
#build = "src/build.rs"
#
#[build-dependencies]
#dotenv = "*"
#indexmap = { version = "*", features = ["serde-1"] }

[dependencies]
ws = "*"
dotenv = "*"
pretty_env_logger = "*"
log = "*"
postgres = "*"
diesel = { version = "*", features = ["postgres", "serde_json", "network-address", "chrono"] }
# Diesel dependencies *must* version-match!
ipnetwork = "0.13.1" # IP address type that Diesel uses
chrono = "0.4.5"
diesel-derive-enum = { version = "*", features = ["postgres"] }
serde_json = "*"
ring = "*"
lazy_static= "*" # for using a global RNG, as recommended in `ring` docs
rand = "*"
futures = "^0.1"
chess_clock = "*"
tokio = "*"
tokio-async-await = "0.1.0"
actix-web-actors = "*"
actix-web = "2"
actix-files = "*"
actix-rt = "1"
actix-identity = "*"
actix = "*"
itsdangerous = "*"
snafu = "*"
vec_map = { version = "*", features = ["serde"] }
mailgun-rs = "*"

serde = { version = "*", features = ["derive"] }
serde_yaml = "*"
indoc = "*"
#matches = "*"
#serde_derive = "*"
